--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -4,42 +4,41 @@
 
 <h3>Store</h3>
 
-<<div class="row">
-		<div class="col-lg-4">
-			<img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-			<div class="box-element product">
-				<h6><strong>Product</strong></h6>
+<div class="row">
+		<div class="col shadoww">
+			<img class="thumbnail" src="{% static 'images/vans.png' %}">
+			<div class="box product">
+				<h6><strong>VANS CLASSIC</strong></h6>
 				<hr>
-
 				<button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
 				<a class="btn btn-outline-success" href="#">View</a>
-				<h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
+				<h4 style="display: inline-block"><strong>$20</strong></h4>
 
 			</div>
 		</div>
 
-		<div class="col-lg-4">
-			<img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-			<div class="box-element product">
-				<h6><strong>Product</strong></h6>
+		<div class="col shadoww">
+			<img class="thumbnail" src="{% static 'images/vans1.png' %}">
+			<div class="box product">
+				<h6><strong>VANS CHECKERBOARD CLASSIC</strong></h6>
 				<hr>
 				
 				<button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
 				<a class="btn btn-outline-success" href="#">View</a>
-				<h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
+				<h4 style="display: inline-block"><strong>$20</strong></h4>
 				
 			</div>
 		</div>
 
-		<div class="col-lg-4">
-			<img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-			<div class="box-element product">
-				<h6><strong>Product</strong></h6>
+		<div class="col shadoww">
+			<img class="thumbnail" src="{% static 'images/vans2.png' %}">
+			<div class="box product">
+				<h6><strong>VANS FLAME OLD SKOOL</strong></h6>
 				<hr>
 
 				<button  class="btn btn-outline-secondary add-btn">Add to Cart</button>
 				<a class="btn btn-outline-success" href="#">View</a>
-				<h4 style="display: inline-block; float: right"><strong>$20</strong></h4>
+				<h4 style="display: inline-block"><strong>$20</strong></h4>
 
 			</div>
 		</div>
