--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -4,59 +4,61 @@
 	padding: 0;
 }
 
-body{
-	background-color: hsl(0, 0%, 98%);
+.body{
+	background-color:white;
 }
 
 h1,h2,h3,h4,h5,h6{
-	color:hsl(0, 0%, 30%);
+	color: black;
 }
-
-.box-element{
+.shadoww{
 	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
 	background-color: #fff;
 	border-radius: 4px;
 	padding: 10px;
+	margin: 5px;
+}
+.box-element{
+	
+	background-color: #fff;
+	border-radius: 4px;
+	padding: 10px;
+	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
 }
 
 .thumbnail{
 	width: 100%;
 	height: 200px;
-    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+	
 }
 
 .product{
 	border-radius: 0 0 4px 4px;
 }
 
-.bg-dark{
-	background-color: #4f868c;
-}
 
-.form-inline{
-	justify-content: end;
-}
 
 #cart-icon{
-	width:25px;
+	width:30px;
+
 	display: inline-block;
 	margin-left: 15px;
+	
 }
 
 #cart-total{
-	display: block;
+	display: inline-block;
 	text-align: center;
+	
 	color:#fff;
 	background-color: red;
-	width: 20px;
-	height: 25px;
+	width: 30px;
+	height: 30px;
 	border-radius: 50%;
-	font-size: 14px;
+	font-size: 16px;
 }
 
-.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
-	margin-top: 10px;
-}
+
 
 .btn{
 	border-radius: 0;
@@ -74,7 +76,7 @@ h1,h2,h3,h4,h5,h6{
 
 .cart-row{
 	display: flex;
-    align-items: flex-stretch;
+    align-items: center;
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ececec;
@@ -102,6 +104,3 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
-.hidden{
-	display: none;
-}
