--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -7,7 +7,7 @@
 
 
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col">
         <div class="box-element">
 
             <a  class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Continue Shopping</a>
