--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -12,31 +12,46 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons@latest/iconfont/tabler-icons.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
-            </li>
-       
-          </ul>
-          <div class="form-inline my-2 my-lg-0">
-               <a href="#"class="btn btn-warning">Login</a>
-               
-               <a href="{% url 'cart' %}">
-                  <img  id="cart-icon" src="{% static 'images/cart.png' %}">
-              </a>
-              <p id="cart-total">0</p>
-  
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'store' %}">Ecommerce</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
 
+      <div class="form-inline">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#"class="btn btn-warning">Login</a>
+
+          </li>
+          <li class="nav-item">
+
+            <a class="cart" href="{% url 'cart' %}">
+              <img  id="cart-icon" src="{% static 'images/cart1.png' %}">
+              <span id="cart-total">0</span>
+           </a>
+
+          </li>
+        </ul>
+        
+
+     </div>
+    </div>
+  </nav>
+
+
+  
       
     <div class="container">
 {% block content %}
