maked models, migrations and added admin panel

--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -37,10 +37,9 @@
           </li>
           <li class="nav-item">
 
-            <a class="cart" href="{% url 'cart' %}">
-              <img  id="cart-icon" src="{% static 'images/cart1.png' %}">
-              <span id="cart-total">0</span>
-           </a>
+            <a class="m-2" href="{% url 'cart' %}">
+              <img  id="cart-icon" src="{% static 'images/cart1.png' %}"><span id="cart-total">0</span>
+            </a>
 
           </li>
         </ul>
