--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -86,7 +86,7 @@
 								<img
 									id="cart-icon"
 									src="{% static 'images/cart1.png' %}"
-								/><span id="cart-total">0</span>
+								/><span id="cart-total">{{cartItems}}</span>
 							</a>
 						</li>
 					</ul>
