--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -88,19 +88,17 @@
 								class="nav-link active"
 								aria-current="page"
 								href="{% url 'store' %}"
-								>Store <span class="sr-only">(current)</span></a
+								>Store <span class="sr-only"></span></a
 							>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Link</a>
-						</li>
+						
 					</ul>
 				</div>
 
 				<div class="form-inline">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a href="#" class="btn btn-warning">Login</a>
+							<a href="#" class="btn btn-outline-success">Login</a>
 						</li>
 						<li class="nav-item">
 							<a class="m-2" href="{% url 'cart' %}">
