--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -35,14 +35,14 @@
 				</div>
 
 				<hr>
-				<input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
+				<input id="form-button" class="btn btn-outline-success" type="submit" value="Continue">
 			</form>
 		</div>
 
 		<br>
 		<div class="box-element hidden" id="payment-info">
 			<small>Paypal Options</small>
-			<button id="make-payment" type="button" class="btn btn-outline-info">Make payment</button>
+			<button id="make-payment" type="button" class="btn btn-outline-success">Make payment</button>
 		</div>
 		
 	</div>
@@ -129,24 +129,24 @@
 		console.log('User Info:', userFormData);
 
 		var url = '/process_order/';
-		// fetch (url, {
-		// 	method: 'POST',
-		// 	// headers: {
-		// 	// 	'Content-Type': 'applicaiton/json',
-		// 	// 	'X-CSRFToken':csrftoken,
-		// 	// },
-		// 	body: JSON.stringify({ 'form': userFormData, 'shipping': shippingInfo }),
-		// })
-			// .then((response) => response.json())
-			// .then((data) => {
-			// 	console.log('Success:', data);
-			// 	alert('Transaction completed');
+		fetch (url, {
+			method: 'POST',
+			// headers: {
+			// 	'Content-Type': 'applicaiton/json',
+			// 	'X-CSRFToken':csrftoken,
+			// },
+			body: JSON.stringify({ 'form': userFormData, 'shipping': shippingInfo }),
+		})
+			.then((response) => response.json())
+			.then((data) => {
+				console.log('Success:', data);
+				alert('Transaction completed');
 
-			// 	cart = {};
-			// 	document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/';
+				cart = {};
+				document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/';
 
-			// 	window.location.href = "{% url 'store' %}";
-			// });
+				window.location.href = "{% url 'store' %}";
+			});
 	}
 </script>
 
