--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -1,18 +1,26 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-
-<div class="row">
-	{% for product in products %}
-	<div class="col-3 m-4 shadoww">
-		<img class="thumbnail" src="{{product.imageURL}}" />
-		<div class="box product">
-			<h6><strong>{{product.name}}</strong></h6>
-			<hr />
-			<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
-			<a class="btn btn-outline-success" href="#">View</a>
-			<h4 style="display: inline-block"><strong>€{{product.price|floatformat:2}}</strong></h4>
+<div class="container text-center">
+	<div class="row justify-content-center">
+		{% for product in products %}
+		<div class="col-3 m-3 shadoww">
+			<img class="thumbnail" src="{{product.imageURL}}" />
+			<div class="box product">
+				<h6><strong>{{product.name}}</strong></h6>
+				<hr />
+				<button
+					data-product="{{product.id}}"
+					data-action="add"
+					class="btn btn-outline-secondary add-btn update-cart"
+				>
+					Add to Cart
+				</button>
+				<a class="btn btn-outline-success" href="#">View</a>
+				<h4 style="display: inline-block">
+					<strong>€{{product.price|floatformat:2}}</strong>
+				</h4>
+			</div>
 		</div>
+		{% endfor %}
 	</div>
-	{% endfor %}
 </div>
-
 {% endblock content %}
